--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "semver": "^5.0.1",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
-    "zmq": "^2.14.0"
+    "zeromq": "^6.0.0-beta.6",
   },
   "optionalDependencies": {
     "bufferutil": "~1.2.1",
